--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,18 +1,19 @@
 {
   "name": "cdk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "bin": {
     "cdk": "bin/cdk.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "cdk": "cdk"
+    "cdk": "npx cdk"
   },
   "devDependencies": {
     "@types/node": "^22.15.12",
+    "aws-cdk": "^2.1019.2",
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^5.8.3"
   }
 }
