--- a/.github/workflows/run-check.yml
+++ b/.github/workflows/run-check.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
 
 permissions:
+  # update to read when statistic fully migrated to the DynamoDB
   contents: write
+  id-token: write
 
 jobs:
   run-check:
@@ -18,6 +20,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/gitHubActionTerminRadarDataRole
+          aws-region: eu-central-1
 
       - name: Install Chrome and ChromeDriver
         run: |
