--- a/.github/workflows/daily_stats.yml
+++ b/.github/workflows/daily_stats.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/gitHubActionTerminRadarDataRole
+          aws-region: eu-central-1
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
